--- a/pallets/kitties/Cargo.toml
+++ b/pallets/kitties/Cargo.toml
@@ -22,6 +22,9 @@ frame-system = { default-features = false, version = '2.0.0' }
 sp-io = { default-features = false, version = '2.0.0' }
 sp-runtime = { default-features = false, version = '2.0.0' }
 sp-std = { default-features = false, version = '2.0.0' }
+pallet-balances = { version = '2.0.0', default-features = false }
+pallet-session = { version = "2.0.0", default-features = false }
+
 
 [dev-dependencies]
 sp-core = { default-features = false, version = '2.0.0' }
@@ -33,5 +36,7 @@ std = [
     'codec/std',
     'frame-support/std',
     'frame-system/std',
-    'sp-std/std'
+    'sp-std/std',
+    'pallet-balances/std',
+    'pallet-session/std',
 ]
